Fix image width on mobile

--- a/client/shared.sass
+++ b/client/shared.sass
@@ -118,6 +118,7 @@ table.table
     img
         display: block
         margin: auto
+        max-width: 100%
 
 .Passage.hasSubtitle
     h1
